// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageLoader Snapshots Messages 1`] = `
<div
  className="sc-AykKE hmpGDh"
>
  <div
    className="sc-AykKC jPvcjs"
  />
  <div
    className="sc-AykKF eNAkLa"
  />
</div>
`;

exports[`MessageLoader Snapshots Multiple words 1`] = `
<div
  className="sc-AykKE hmpGDh"
>
  <div
    className="sc-AykKC jPvcjs"
  />
  <div
    className="sc-AykKF eNAkLa"
  >
    <div
      className="sc-AykKH eypbSr"
    >
      Reticulating splines...
    </div>
  </div>
</div>
`;

exports[`MessageLoader Snapshots invalid Messages 1`] = `
<div
  className="sc-AykKE hmpGDh"
>
  <div
    className="sc-AykKC jPvcjs"
  />
  <div
    className="sc-AykKF eNAkLa"
  />
</div>
`;
